Continue imprioving mag

--- a/docs/case_study/magnetic.ipynb
+++ b/docs/case_study/magnetic.ipynb
@@ -2,14 +2,21 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "64e79b57",
+   "id": "516db7a4",
    "metadata": {},
    "source": [
     "<p style=\"page-break-after:always;\"></p>\n",
     "\n",
     "# Magnetic Inversion\n",
     "\n",
-    "This section focuses on the inversion of magnetic data using a scalar (susceptibility) and a magnetization (vector) approach.\n",
+    "This section focuses on the inversion of magnetic data using a scalar (susceptibility) and a magnetization (vector) approach generated from the Flin Flon magnetic model ([Figure X](mag_model).\n",
+    "\n",
+    "```{figure} ./images/magnetics/mag_model.png\n",
+    "---\n",
+    "scale: 50%\n",
+    "name: mag_model\n",
+    "---\n",
+    "```\n",
     "\n",
     "\n",
     "<p style=\"page-break-after:always;\"></p>"
@@ -17,12 +24,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8fb5dec",
+   "id": "eff25c3f",
    "metadata": {},
    "source": [
     "(magnetic-data)=\n",
     "\n",
-    "## Data (TMI)\n",
+    "## Forward simulation\n",
     "\n",
     "We simulated Residual Magnetic Intensity (RMI) data along East-West lines at a 40 m drape height above topography. The line spacing was set to 200 m, with along-line data downsampled to 10 m.\n",
     "\n",
@@ -35,8 +42,7 @@
     "---\n",
     "```\n",
     "\n",
-    "This simulation assumes a purely induced response with no additional information provided about the direction of magnetization.\n",
-    "\n",
+    "For simplicity, the simulation assumes a purely induced response. This is done by omitting to provide values/models for the magnetization inclination and declination. The inducing field parameters are used instead. After running the forward simulation, we obtain RMI data as shown in [Figure X](mag_data). We note the strong correlation between the amplitude of the signal and the horizontal position of the ore body. There is also a significant East-West trend due to the weakly magnetic but large Hidden Formation.\n",
     "\n",
     "\n",
     "```{figure} ./images/magnetics/MAG_data.png\n",
@@ -47,19 +53,17 @@
     "Residual magnetic intensity (RMI) data measured over the zone of interest.\n",
     "```\n",
     "\n",
-    "We can notice a strong correlation between the RMI data and the horizontal position of the ore body.\n",
-    "\n",
     "<p style=\"page-break-after:always;\"></p>"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3846ec0e",
+   "id": "bcd98313",
    "metadata": {},
    "source": [
     "## Mesh creation\n",
     "\n",
-    "In preparation for the the inversion, we can create an optimal octree mesh for this survey. For potential fields data, only the discretization below ground matters as air cells are ignored in the calculations. [Figure X]() shows the parameters used in this case.\n",
+    "In preparation for the inversion, we create an octree mesh optimized for the magnetic survey. [Figure X]() shows the parameters used.\n",
     "\n",
     "```{figure} ./images/magnetics/mesh_core.png\n",
     "---\n",
@@ -69,46 +73,74 @@
     "Residual magnetic intensity (RMI) data measured over the zone of interest.\n",
     "```\n",
     "\n",
-    "For the refinement, ...\n",
+    "For the first refinement, we apply only a couple cells radially around our survey lines to assure that the air-ground interface near the receivers are modeled with the finest cell size.\n",
     "\n",
+    "A second refinement is used along topography to get a coarse but continuous air-ground interface outside the area or interest.\n",
+    "\n",
+    "A third \"horizon\" type of refinement is used to get a core region of increasing cell size with depth directly below the survey.\n",
     "\n",
     "```{figure} ./images/magnetics/mesh_refinement.png\n",
     "---\n",
     "scale: 50%\n",
-    "name: mag_data\n",
+    "name: mag_refinement\n",
     "---\n",
-    "Residual magnetic intensity (RMI) data measured over the zone of interest.\n",
+    "Refinement strategy used for the magnetic modeling.\n",
     "```\n",
-    "\n",
     "\n",
     "See [Mesh creation](../inversion/mesh_design.ipynb) section for general details on the parameters.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "93e9f2f4",
+   "id": "eb295a81",
    "metadata": {},
    "source": [
     "## Scalar inversion (susceptibility)\n",
     "\n",
-    "The airborne magnetic data were inverted over a range of uncertainties in order to achieve an adequate data fit. Following the smooth solution, a series of IRLS iterations were performed to recover an alternate, more compact model. The following figure shows sections through the recovered models and compares the observed and predicted data.\n",
+    "**Runtime: ~1 min**\n",
     "\n",
+    "As a first pass, we invert the data with default parameters shown in [Figure X](data_input). We use a constant 25 nT floor uncertainty, determined empirically to achieve good fit.\n",
     "\n",
-    "```{figure} ./images/mag_model_TOP.png\n",
+    "```{figure} ./images/data_input.png\n",
     "---\n",
     "height: 400px\n",
     "\n",
-    "name: mag_model_TOP\n",
+    "name: mag_default\n",
     "---\n",
     "(Top) (left) Observed and (right) predicted data after convergence of the L2 (smooth) solution. Most of the data is well recovered.\n",
     "\n",
     "(Bottom) Horizontal slice at 255 m elevation for (left) the smooth and (right) compact magnetization models.\n",
-    "```\n"
+    "```\n",
+    "\n",
+    "Following the smooth solution, a series of IRLS iterations were performed to recover an alternate, more compact model. The following figure shows sections through the recovered models and compares the observed and predicted data.\n",
+    "\n",
+    "\n",
+    "```{figure} ./images/data_input.png\n",
+    "---\n",
+    "height: 400px\n",
+    "\n",
+    "name: mag_default\n",
+    "---\n",
+    "(Top) (left) Observed and (right) predicted data after convergence of the L2 (smooth) solution. Most of the data is well recovered.\n",
+    "\n",
+    "(Bottom) Horizontal slice at 255 m elevation for (left) the smooth and (right) compact magnetization models.\n",
+    "```\n",
+    "\n",
+    "\n",
+    "### No reference model\n",
+    "\n",
+    "From our previous attempt, we note that large portions of the model, in the padding cells and at depth, have no anomalies. All the magnetic signal is confined to a region directly below the survey lines. This is somewhat surprising given the large East-West trend in the data, which would be better explain by a large body extending beyond the extent of our survey.\n",
+    "As a second pass, we test whether our initial assumption of a uniform 0 susceptibility model is adequate ([Figure X]())\n",
+    "\n",
+    "The recovered model shown in [Figure X](data_input) generally agrees with the position of the strongly magnetic ore body, but changes greatly outside the survey area. Since we have not imposed any constraints on the background value, the inversion is free to extend the anomaly both at depth and in the padding region.\n",
+    "\n",
+    "\n",
+    "[To be continued with detrending and regional removal]"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e3da2e13",
+   "id": "28a3ff6a",
    "metadata": {},
    "source": [
     "## Magnetic vector inversion (MVI)\n",
@@ -135,7 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea2f29bd",
+   "id": "0a729d34",
    "metadata": {},
    "source": [
     "## Compact models\n",
