--- a/docs/case_study/gravity.ipynb
+++ b/docs/case_study/gravity.ipynb
@@ -2,14 +2,22 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d34cea76",
+   "id": "3289cb90",
    "metadata": {},
    "source": [
     "<p style=\"page-break-after:always;\"></p>\n",
     "\n",
     "# Gravity Inversion\n",
     "\n",
-    "This section focuses on the inversion of airborne tensor and ground gravity data.\n",
+    "This section focuses on the inversion of airborne tensor and ground gravity data generated from the Flin Flon density model.\n",
+    "\n",
+    "```{figure} ./images/gravity/grav_model.png\n",
+    "---\n",
+    "scale: 25%\n",
+    "name: grav_model\n",
+    "---\n",
+    "[Download here](https://github.com/MiraGeoscience/simpeg-drivers/blob/develop/simpeg_drivers-assets/inversion_demo.geoh5)\n",
+    "```\n",
     "\n",
     "\n",
     "\n",
@@ -18,16 +26,25 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99eafc35",
+   "id": "489bc5a7",
    "metadata": {},
    "source": [
-    "## Ground gravity data\n",
+    "## Forward simulation\n",
     "\n",
+    "A ground gravity survey was simulated on sparsely sampled 200 m grid of stations.\n",
     "\n",
-    "A ground gravity survey was simulated on sparsely sampled 200 m grid of stations. The data are provided a terrain corrected with\n",
-    "reference density of 2.67 g/cc.\n",
+    "The following parameters were used for the forward simulation:\n",
     "\n",
-    "```{figure} ./images/GZ_data.png\n",
+    "```{figure} ./images/gravity/grav_forward.png\n",
+    "---\n",
+    "scale: 50%\n",
+    "name: grav_forward\n",
+    "---\n",
+    "```\n",
+    "\n",
+    "After running the forward simulation, we obtain gravity corrected data as shown in [Figure 14](gz_data). The data are provided a terrain corrected with reference density of 2.67 g/cc. The gravity survey appears to be mostly influenced by the large formations, with little signal apparent from the ore body.\n",
+    "\n",
+    "```{figure} ./images/gravity/gz_data.png\n",
     "---\n",
     "scale: 50%\n",
     "name: gz_data\n",
@@ -38,78 +55,136 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00f464ef",
+   "id": "3e9e475d",
    "metadata": {},
    "source": [
-    "## Unconstrained ground gravity\n",
+    "## Mesh creation\n",
     "\n",
-    "The ground gravity data (terrain corrected at 2.67 g/cc) were also inverted in the same fashion. A floor uncertainty value of 0.05 mGal was assigned.\n",
+    "In preparation for the inversion, we create an octree mesh optimized for the gravity survey.\n",
     "\n",
+    "The core param are as follow:\n",
     "\n",
-    "\n",
-    "```{figure} ./images/ground_grav_model_TOP.png\n",
+    "```{figure} ./images/magnetics/mesh_core.png\n",
     "---\n",
-    "height: 400px\n",
-    "name: ground_grav_model_TOP\n",
+    "scale: 50%\n",
+    "name: mag_core\n",
     "---\n",
-    "(Top) (left) Observed and (right) predicted gz data after convergence of the L2 (smooth) solution. Most of the data is well recovered.\n",
-    "\n",
-    "(Bottom) Horizontal slice for (left) the smooth and (right) L1-norm density contrast models.\n",
+    "Core mesh parameters.\n",
     "```\n",
     "\n",
-    "[Add more here]\n",
+    "- The first refinement \"horizon\" is used to get a core region at depth with increasing cell size directly below the survey. This is our volume of interest most strongly influence by the data. We use a maximum distance of 100 m to limit the refinement near each station.\n",
     "\n",
-    "We note a slight correlation to the shape of the known ore body\n"
+    "- A second refinement is used along topography to get a coarse but continuous air-ground interface outside the area or interest.\n",
+    "\n",
+    "\n",
+    "```{figure} ./images/magnetics/mesh_refinement.png\n",
+    "---\n",
+    "scale: 50%\n",
+    "name: mag_refinement\n",
+    "---\n",
+    "Refinement strategy used for the magnetic modeling.\n",
+    "```\n",
+    "\n",
+    "See [Mesh creation](../inversion/mesh_design.ipynb) section for general details on the parameters.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5576b176",
+   "id": "a9d41d9a",
+   "metadata": {},
+   "source": [
+    "## Ground gravity\n",
+    "\n",
+    "The ground gravity data are assigned a constant floor uncertainty value of 0.1 mGal. We apply the the following inversion parameters:\n",
+    "\n",
+    "```{figure} ./images/gravity/gz_input.png\n",
+    "---\n",
+    "scale: 50%\n",
+    "name: gz_input\n",
+    "---\n",
+    "```\n",
+    "\n",
+    "After running the inversion we obtain:\n",
+    "\n",
+    "\n",
+    "```{figure} ./images/gravity/gz_no_ref.png\n",
+    "---\n",
+    "name: gz_no_ref\n",
+    "\n",
+    "---\n",
+    "(Top) (left) Predicted and (right) residuals data after reaching target misfit (iteration 5).\n",
+    "\n",
+    "(Bottom) Slices through the recovered relative density model: (left) at 175 m elevation and (right) at 6072150 m N.\n",
+    "Ore shell is shown for reference.\n",
+    "```\n",
+    "\n",
+    "Notice that the inversion resolves the boundaries between the rhyolite unit and host mafic units, but poorly recovers the ore body. That is, the ore body does not generate a gravity anomaly strong enough within the host geology to be detected by the ground gravity survey."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a55da49",
    "metadata": {},
    "source": [
     "(ftg-data)=\n",
     "\n",
     "## Tensor gravity gradiometry (FTG)\n",
     "\n",
-    "An airborne fixed-wing full-tensor gravity gradiometry (FTG) survey was simulated at a nominal drape height of 60 m above topography.\n",
+    "We now look at the airborne fixed-wing full-tensor gravity gradiometry (FTG) data. The FTG system measures six independent components of the gradient tensor: $g_{xx},\\; g_{xy},\\; g_{xz},\\; g_{yy},\\; g_{yz}$ and $g_{zz}$. We generate a survey flown at 45 degree azimuth, 200 m line spacing, at a nominal drape height of 60 m above topography.\n",
     "\n",
-    "The FTG system measures six independent components of the gradient tensor: $g_{xx},\\; g_{xy},\\; g_{xz},\\; g_{yy},\\; g_{yz}$ and $g_{zz}$. Data were leveled, free-air and terrain corrected with 2.67 g/cc reference density.\n",
+    "Using the same relative density model as previously, we run the forward simulation and obtain terrain-corrected data show below.\n",
     "\n",
     "\n",
-    "```{figure} ./images/GG_data.png\n",
+    "```{figure} ./images/gravity/gg_data.png\n",
     "---\n",
-    "scale: 50%\n",
-    "name: ftg_data\n",
+    "name: gg_data\n",
+    "\n",
     "---\n",
-    "(Top) Components of the gravity gradiometry data measured over the zone of interest. (Bottom) The green and red marker indicate the flight direction.\n",
-    "```\n"
+    "(Top) Components of the gravity gradiometry data measured over the zone of interest. (Bottom) Plan view of the density model and flight lines. The green and red marker indicate the flight direction.\n",
+    "```\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "68b36693",
+   "id": "44e02efb",
    "metadata": {},
    "source": [
     "## Unconstrained FTG\n",
     "\n",
-    "The airborne tensor gravity data (terrain corrected at 2.67 g/cc) were also inverted in the same fashion. A floor uncertainty value of 0.2 Eotvos was assigned to all the components.\n",
+    "We repeat the same inverse process as for the ground gravity data, but this time with the airborne survey. A floor uncertainty value of 0.1 Eotvos was assigned to all the components. After running the inversion with obtain.\n",
     "\n",
     "\n",
-    "\n",
-    "```{figure} ./images/grav_gradio_model_TOP.png\n",
+    "```{figure} ./images/gravity/gg_no_ref.png\n",
     "---\n",
-    "height: 400px\n",
-    "name: grav_gradio_model_TOP\n",
-    "---\n",
-    "(Top) (left) Observed and (right) predicted gxx data after convergence of the L2 (smooth) solution. Most of the data is well recovered.\n",
+    "name: gg_no_ref\n",
     "\n",
-    "(Bottom) Horizontal slice for (left) the smooth and (right) L1-norm density contrast models.\n",
+    "---\n",
+    "(Top) (left) Predicted and (right) residuals data after reaching target misfit (iteration 7).\n",
+    "\n",
+    "(Bottom) Slices through the recovered relative density model: (left) at 175 m elevation and (right) at 6072150 m N.\n",
+    "Ore shell is shown for reference.\n",
     "```\n",
     "\n",
-    "We note a slight correlation to the shape of the known ore body\n",
+    "Just like the ground gravity result, the airborne inversion recovers well the boundary between the rhyolite and host mafic rocks. The ore body is also imaged on the top 200 m. In addition, we recover density structures within the Hidden Formation related to the overburden layer.\n",
     "\n",
     "\n",
     "<p style=\"page-break-after:always;\"></p>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a733de2",
+   "metadata": {},
+   "source": [
+    "## Detrending\n",
+    "\n",
+    "Section to explain different strategies for regional signal removal\n",
+    "\n",
+    "- Polynomial\n",
+    "\n",
+    "\n",
+    "- Scooping method"
    ]
   }
  ],
