--- a/docs/case_study/magnetic.ipynb
+++ b/docs/case_study/magnetic.ipynb
@@ -2,20 +2,24 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "516db7a4",
+   "id": "f40dc101",
    "metadata": {},
    "source": [
     "<p style=\"page-break-after:always;\"></p>\n",
     "\n",
     "# Magnetic Inversion\n",
     "\n",
-    "This section focuses on the inversion of magnetic data using a scalar (susceptibility) and a magnetization (vector) approach generated from the Flin Flon magnetic model ([Figure X](mag_model).\n",
+    "This section focuses on the inversion of magnetic data using a scalar (susceptibility) and a magnetization (vector) approach generated from the Flin Flon magnetic model. We also cover some strategies on how to remove regional signal and the use of compact norms.\n",
+    "\n",
+    "\n",
     "\n",
     "```{figure} ./images/magnetics/mag_model.png\n",
     "---\n",
-    "scale: 50%\n",
+    "scale: 25%\n",
+    "\n",
     "name: mag_model\n",
     "---\n",
+    "[Download here](https://github.com/MiraGeoscience/simpeg-drivers/blob/develop/simpeg_drivers-assets/inversion_demo.geoh5)\n",
     "```\n",
     "\n",
     "\n",
@@ -24,14 +28,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eff25c3f",
+   "id": "4057654c",
    "metadata": {},
    "source": [
     "(magnetic-data)=\n",
     "\n",
     "## Forward simulation\n",
     "\n",
-    "We simulated Residual Magnetic Intensity (RMI) data along East-West lines at a 40 m drape height above topography. The line spacing was set to 200 m, with along-line data downsampled to 10 m.\n",
+    "We simulated Residual Magnetic Intensity (RMI) data along East-West lines spaced to 200 m apart, with along-line data downsampled to 10 m. The flight height is set to 40 m above topography.\n",
     "\n",
     "The following parameters were used for the forward simulation:\n",
     "\n",
@@ -42,7 +46,9 @@
     "---\n",
     "```\n",
     "\n",
-    "For simplicity, the simulation assumes a purely induced response. This is done by omitting to provide values/models for the magnetization inclination and declination. The inducing field parameters are used instead. After running the forward simulation, we obtain RMI data as shown in [Figure X](mag_data). We note the strong correlation between the amplitude of the signal and the horizontal position of the ore body. There is also a significant East-West trend due to the weakly magnetic but large Hidden Formation.\n",
+    "For simplicity, the simulation assumes a purely induced response. By omitting to supply values/models for the inclination and declination of magnetization, the forward routine uses the inducing field parameters instead. \n",
+    "\n",
+    "After running the forward simulation, we obtain RMI data as shown in [Figure 9](mag_data). We note the strong correlation between the amplitude of the signal and the horizontal position of the ore body. There is also a significant long wavelength East-West trend, due to the large but weakly magnetic Hidden Formation.\n",
     "\n",
     "\n",
     "```{figure} ./images/magnetics/MAG_data.png\n",
@@ -58,26 +64,26 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bcd98313",
+   "id": "0416d0b3",
    "metadata": {},
    "source": [
     "## Mesh creation\n",
     "\n",
-    "In preparation for the inversion, we create an octree mesh optimized for the magnetic survey. [Figure X]() shows the parameters used.\n",
+    "In preparation for the inversion, we create an octree mesh optimized for the magnetic survey. [Figure 10](mag_core) shows the parameters used.\n",
     "\n",
     "```{figure} ./images/magnetics/mesh_core.png\n",
     "---\n",
     "scale: 50%\n",
-    "name: mag_data\n",
+    "name: mag_core\n",
     "---\n",
-    "Residual magnetic intensity (RMI) data measured over the zone of interest.\n",
+    "Core mesh parameters.\n",
     "```\n",
     "\n",
-    "For the first refinement, we apply only a couple cells radially around our survey lines to assure that the air-ground interface near the receivers are modeled with the finest cell size.\n",
+    "- For the first refinement, we insert two cells around our survey lines. The refinement is done radially around the segments of the curve to assure that the air-ground interface near the receivers are modeled with the finest cell size.\n",
     "\n",
-    "A second refinement is used along topography to get a coarse but continuous air-ground interface outside the area or interest.\n",
+    "- A second refinement is used along topography to get a coarse but continuous air-ground interface outside the area or interest.\n",
     "\n",
-    "A third \"horizon\" type of refinement is used to get a core region of increasing cell size with depth directly below the survey.\n",
+    "- The third refinement \"horizon\" is used to get a core region at depth with increasing cell size directly below the survey. This is our volume of interest most strongly influence by the data. \n",
     "\n",
     "```{figure} ./images/magnetics/mesh_refinement.png\n",
     "---\n",
@@ -92,87 +98,103 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb295a81",
+   "id": "a9805073",
    "metadata": {},
    "source": [
     "## Scalar inversion (susceptibility)\n",
     "\n",
     "**Runtime: ~1 min**\n",
     "\n",
-    "As a first pass, we invert the data with default parameters shown in [Figure X](data_input). We use a constant 25 nT floor uncertainty, determined empirically to achieve good fit.\n",
+    "As a first pass, we invert the data with default parameters shown in [Figure 12](mag_default). We use a constant 25 nT floor uncertainty, determined empirically to achieve good fit. After running the inversion we obtain:\n",
     "\n",
-    "```{figure} ./images/data_input.png\n",
+    "```{figure} ./images/magnetics/mag_model_default.png\n",
     "---\n",
-    "height: 400px\n",
-    "\n",
     "name: mag_default\n",
     "---\n",
-    "(Top) (left) Observed and (right) predicted data after convergence of the L2 (smooth) solution. Most of the data is well recovered.\n",
+    "(Top) (left) Predicted and (right) residuals data after reaching target misfit (iteration 3).\n",
     "\n",
-    "(Bottom) Horizontal slice at 255 m elevation for (left) the smooth and (right) compact magnetization models.\n",
+    "(Bottom) Slices through the recovered susceptibility model: (left) at 175 m elevation and (right) at 6072150 m N.\n",
     "```\n",
     "\n",
-    "Following the smooth solution, a series of IRLS iterations were performed to recover an alternate, more compact model. The following figure shows sections through the recovered models and compares the observed and predicted data.\n",
-    "\n",
-    "\n",
-    "```{figure} ./images/data_input.png\n",
-    "---\n",
-    "height: 400px\n",
-    "\n",
-    "name: mag_default\n",
-    "---\n",
-    "(Top) (left) Observed and (right) predicted data after convergence of the L2 (smooth) solution. Most of the data is well recovered.\n",
-    "\n",
-    "(Bottom) Horizontal slice at 255 m elevation for (left) the smooth and (right) compact magnetization models.\n",
-    "```\n",
+    "We note that our model predicts the data within our uncertainty floor of 25 nT. In plan view, the model shows a clear North-West trend corresponding to the ore body. On the vertical section we recover an isolate body at depth. We note that large portions of the model in the padding cells have no anomalies. All the magnetic signal is confined to a region directly below the survey lines. This is somewhat surprising given the large East-West trend in the data, which would be better explain by a large body extending beyond the extent of our survey. \n",
     "\n",
     "\n",
     "### No reference model\n",
     "\n",
-    "From our previous attempt, we note that large portions of the model, in the padding cells and at depth, have no anomalies. All the magnetic signal is confined to a region directly below the survey lines. This is somewhat surprising given the large East-West trend in the data, which would be better explain by a large body extending beyond the extent of our survey.\n",
-    "As a second pass, we test whether our initial assumption of a uniform 0 susceptibility model is adequate ([Figure X]())\n",
+    "As a second pass, we test whether our initial assumption of a uniform zero susceptibility model is adequate. We can remove the influence on the reference model by setting the corresponding scaling factor to 0. After re-running the inversion we recover:\n",
     "\n",
-    "The recovered model shown in [Figure X](data_input) generally agrees with the position of the strongly magnetic ore body, but changes greatly outside the survey area. Since we have not imposed any constraints on the background value, the inversion is free to extend the anomaly both at depth and in the padding region.\n",
+    "```{figure} ./images/magnetics/no_ref_input.png\n",
+    "---\n",
+    "scale: 50%\n",
+    "name: no_ref_input\n",
+    "```\n",
+    "\n",
+    "The model shown in [Figure 13](mag_no_ref) generally agrees with the position of the strongly magnetic ore body, but changes greatly outside the survey area. Since we have not imposed any constraints on the background value, the inversion is free to extend the smoothout the eastern anomaly both at depth and in the padding region. This is in better agreement with our known geological knowledge.\n",
     "\n",
     "\n",
-    "[To be continued with detrending and regional removal]"
+    "```{figure} ./images/magnetics/mag_model_no_ref.png\n",
+    "---\n",
+    "name: mag_no_ref\n",
+    "---\n",
+    "(Top) (left) Predicted and (right) residuals data after reaching target misfit (iteration 3).\n",
+    "\n",
+    "(Bottom) Slices through the recovered susceptibility model: (left) at 175 m elevation and (right) at 6072150 m N.\n",
+    "```\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "28a3ff6a",
+   "id": "b473337c",
    "metadata": {},
    "source": [
     "## Magnetic vector inversion (MVI)\n",
     "\n",
-    "The airborne magnetic data were inverted over a range of uncertainties in order to achieve an adequate data fit. Following the smooth solution, a series of IRLS iterations were performed to recover an alternate, more compact model. The following figure shows sections through the recovered models and compares the observed and predicted data.\n",
+    "We now look at the solution using the magnetic vector inversion (MVI) algorithm. This approach is generally favoured if [remanent magnetization](https://gpg.geosci.xyz/content/magnetics/magnetics_basic_principles.html?highlight=remanence#remanent-magnetization) is kwown to distorte the magnetic signal. \n",
     "\n",
+    "We use the default parameters but without a reference model as shown below.\n",
     "\n",
-    "```{figure} ./images/mag_model_TOP.png\n",
+    "```{figure} ./images/magnetics/mvi_input.png\n",
     "---\n",
-    "height: 400px\n",
-    "name: mag_model_TOP\n",
-    "---\n",
-    "(Top) (left) Observed and (right) predicted data after convergence of the L2 (smooth) solution. Most of the data is well recovered.\n",
-    "\n",
-    "(Bottom) Horizontal slice at 255 m elevation for (left) the smooth and (right) compact magnetization models.\n",
+    "scale: 50%\n",
+    "name: mvi_input\n",
     "```\n",
     "\n",
+    "After running the inversion, we obtain\n",
     "\n",
-    "[Add more here]\n",
     "\n",
+    "```{figure} ./images/magnetics/mvi_model.png\n",
+    "---\n",
+    "name: mvi_model\n",
+    "---\n",
+    "(Top) (left) Predicted and (right) residuals data after reaching target misfit (iteration 3).\n",
+    "\n",
+    "(Bottom) Slices through the recovered susceptibility model: (left) at 175 m elevation and (right) at 6072150 m N.\n",
+    "```\n",
+    "\n",
+    "We note that the effective susceptibility values are much lower than recovered with the scalar susceptibility inversion. The anomaly is also smoother, broader and less well defined at depth. This can be explained by the increase in non-uniquess of the inverse problem, where we now have to solve for three models (vectors) at once. This result could be improved with additional constraints, but beyond the scopy of this section.\n",
+    "\n",
+    "\n",
+    "### Algorithmic details\n",
+    "\n",
+    "Looking back at the log file, users may notive that the MVI process goes through three main stages:\n",
+    "\n",
+    "1- Solve the problem in Cartesian (3-components) form for a smooth model\n",
+    "\n",
+    "2- Convert the model to Spherical (amplitude and angles) and iterate to target misfit.\n",
+    "\n",
+    "3- Use the smooth Spherical model for the compact IRLS iterations.\n",
+    "\n",
+    "```{figure} ./images/magnetics/mvi_log.png\n",
+    "---\n",
+    "scale: 50%\n",
+    "name: mvi_log\n",
+    "```\n",
+    "\n",
+    "Note that the last Cartesian model ends after reaching a target misfit of about 2x (hard-coded). User should preferentially use the last model from the Spherical steps, or last of IRLS, to do their interpration as both are on or near target. \n",
+    "\n",
+    "See [Fournier et al. 2020](https://owncloud.eoas.ubc.ca/s/iXrwgjXjierfoKa/download) for more details.\n",
     "\n",
     "<p style=\"page-break-after:always;\"></p>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0a729d34",
-   "metadata": {},
-   "source": [
-    "## Compact models\n",
-    "\n",
-    "\n"
    ]
   }
  ],
